--- a/bohcura/src/App.css
+++ b/bohcura/src/App.css
@@ -132,7 +132,7 @@
 .contact-message {
   height: 100px;
   width: 300px;
-/* PUBLIC HOME COMPONENT */
+}
 
 .homeContainer {
   position: relative;
