--- a/bohcura/src/App.css
+++ b/bohcura/src/App.css
@@ -133,28 +133,32 @@
   height: 100px;
   width: 300px;
 }
-/* PUBLIC HOME COMPONENT */
 
+
+/* PUBLIC HOME COMPONENT */
 
 .homeContainer {
   position: relative;
   display: flex;
   justify-content: space-around;
-  height: 75vh;
-  align-items: stretch;
-  margin-top: 250px;
+  flex-wrap: wrap;
+  width: 80%;
+  margin: 100px auto 0;
+}
+
+.homeContainer h1{
+  margin-bottom: 75px;
 }
 
 .homeChefContainer {
-  width: 30%;
-  height: 100%;
+  width: 40%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .homeChefContainer img{
-  height: 30%;
+  height: 40%;
   width: 100%;
   object-fit: cover;
   object-position: 0% 80%;
@@ -167,15 +171,14 @@
 }
 
 .homeRecipeContainer {
-  width: 30%;
-  height: 100%;
+  width: 40%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .homeRecipeContainer img{
-  height: 30%;
+  height: 40%;
   width: 100%;
   object-fit: cover;
   object-position: 0% 80%;
@@ -185,14 +188,6 @@
   text-align: left;
   font-size: 120%;
   font-weight: 600;
-}
-
-.homeCRText {
-  top: 7%;
-  width: 27%;
-  position: absolute;
-  display: flex;
-  justify-content: space-between;
 }
 
 .chefButtons {
@@ -218,4 +213,27 @@ button{
   width: 100%;
   height: 5%;
 
+}
+
+/* Nav Bar */
+
+.navBar {
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  height: 50px;
+  background: #282c34;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navItem {
+  text-decoration: none;
+  color: #D9D9D9;
+  margin: 0 50px;
+  font-weight: 600;
+}
+
+.logo {
 }
