finished styling on public home page

--- a/bohcura/src/App.css
+++ b/bohcura/src/App.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+}
+
 .App {
   text-align: center;
 }
@@ -139,54 +143,61 @@
 .homeContainer {
   position: relative;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
   width: 80%;
+  height: 500px;
   margin: 100px auto 0;
 }
 
 .homeContainer h1{
-  margin-bottom: 75px;
+  margin-bottom: 50px;
+  height: 100px;
+  font-family: 'Fahkwang', sans-serif;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 47px;
+  text-align: left;
 }
 
 .homeChefContainer {
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 38vw;
+  height: 22vw;
 }
 
 .homeChefContainer img{
-  height: 40%;
+  height: 100%;
   width: 100%;
   object-fit: cover;
   object-position: 0% 80%;
 }
 
-.homeChefContainer p{
-  text-align: left;
-  font-size: 120%;
+.homeChefContainer h2{
+  font-family: 'Fahkwang', sans-serif;
+  color: #CC3B31;
   font-weight: 600;
+  font-size: 36px;
+  line-height: 47px;
 }
 
 .homeRecipeContainer {
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 38vw;
+  height: 22vw;
 }
 
 .homeRecipeContainer img{
-  height: 40%;
+  height: 100%;
   width: 100%;
   object-fit: cover;
   object-position: 0% 80%;
 }
 
-.homeRecipeContainer p{
-  text-align: left;
-  font-size: 120%;
+.homeRecipeContainer h2{
+  font-family: 'Fahkwang', sans-serif;
+  color: #CC3B31;
   font-weight: 600;
+  font-size: 36px;
+  line-height: 47px;
 }
 
 .chefButtons {
@@ -211,9 +222,15 @@ button{
   justify-content: center;
   width: 100%;
   height: 5%;
-
 }
 
+.chefNavLink {
+  text-decoration: none;
+}
+
+.recipeNavLink {
+  text-decoration: none;
+}
 /* Nav Bar */
 
 .navBar {
@@ -232,7 +249,4 @@ button{
   color: #D9D9D9;
   margin: 0 50px;
   font-weight: 600;
-}
-
-.logo {
 }
