--- a/bohcura/src/App.css
+++ b/bohcura/src/App.css
@@ -1,5 +1,10 @@
+* {
+  margin: 0;
+}
+
 .App {
   text-align: center;
+  max-width: 1440px;
 }
 
 .App-logo {
@@ -80,7 +85,7 @@
   width: 45%;
   margin-top: 0px;
   font-family: 'Libre Franklin', sans-serif;
-  font-style: Medium; 
+  font-style: Medium;
   font-size: 34px;
   line-height: 42px;
   line-height: 102%;
@@ -136,64 +141,64 @@
 
 /* PUBLIC HOME COMPONENT */
 
-
 .homeContainer {
   position: relative;
   display: flex;
-  justify-content: space-around;
-  height: 75vh;
-  align-items: stretch;
-  margin-top: 250px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 80%;
+  height: 500px;
+  margin: 100px auto 0;
+}
+
+.homeContainer h1{
+  margin-bottom: 50px;
+  height: 100px;
+  font-family: 'Fahkwang', sans-serif;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 47px;
+  text-align: left;
 }
 
 .homeChefContainer {
-  width: 30%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 38vw;
+  height: 22vw;
 }
 
 .homeChefContainer img{
-  height: 30%;
+  height: 100%;
   width: 100%;
   object-fit: cover;
   object-position: 0% 80%;
 }
 
-.homeChefContainer p{
-  text-align: left;
-  font-size: 120%;
+.homeChefContainer h2{
+  font-family: 'Fahkwang', sans-serif;
+  color: #CC3B31;
   font-weight: 600;
+  font-size: 36px;
+  line-height: 47px;
 }
 
 .homeRecipeContainer {
-  width: 30%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 38vw;
+  height: 22vw;
 }
 
 .homeRecipeContainer img{
-  height: 30%;
+  height: 100%;
   width: 100%;
   object-fit: cover;
   object-position: 0% 80%;
 }
 
-.homeRecipeContainer p{
-  text-align: left;
-  font-size: 120%;
+.homeRecipeContainer h2{
+  font-family: 'Fahkwang', sans-serif;
+  color: #CC3B31;
   font-weight: 600;
-}
-
-.homeCRText {
-  top: 7%;
-  width: 27%;
-  position: absolute;
-  display: flex;
-  justify-content: space-between;
+  font-size: 36px;
+  line-height: 47px;
 }
 
 .chefButtons {
@@ -218,11 +223,43 @@ button{
   justify-content: center;
   width: 100%;
   height: 5%;
+}
 
+.chefNavLink {
+  text-decoration: none;
+}
+
+.recipeNavLink {
+  text-decoration: none;
+}
+/* Nav Bar */
+
+.navBar {
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  height: 50px;
+  background: #282c34;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navItem {
+  text-decoration: none;
+  color: #D9D9D9;
+  margin: 0 50px;
+  font-weight: 600;
 }
 
 .styledInput {
   border: none;
   border-bottom: 1px solid #c3c3c3;
   text-align: center;
+}
+
+.styledIcon {
+  padding: 3px;
+  margin-left: 3px;
+  margin-right: 5px;
 }
