--- a/bohcura/src/App.css
+++ b/bohcura/src/App.css
@@ -1,18 +1,18 @@
 * {
   margin: 0;
 }
-
 .App {
   text-align: center;
-  max-width: 1440px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,11 +23,9 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
 .App-link {
   color: #61dafb;
 }
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,9 +34,6 @@
     transform: rotate(360deg);
   }
 }
-
-
-
 /* SIGN UP COMPONENT */
 .signUpContainer{
   display: flex;
@@ -54,25 +49,21 @@
   text-align: center;
   vertical-align: center;
 }
-
 .signUpBottom {
   display: flex;
   width: 90%;
   margin: 200px auto;
   justify-content: space-between;
 }
-
 .signUpBottom p {
   font-size: 150%;
   text-align: left;
 }
-
 .signUpForm {
   width: 37%;
   margin-left: 100px;
   margin-right: 50px;
 }
-
 .signUpForm button{
   width: 75%;
   background: #C4C4C4;
@@ -80,7 +71,6 @@
   border-radius: 5px;
   height: 40px;
 }
-
 .signUpText {
   width: 45%;
   margin-top: 0px;
@@ -92,7 +82,6 @@
   text-align: left;
   vertical-align: center;
 }
-
 .signUpEmail {
   background: #FFFFFF;
   width: 100%;
@@ -103,7 +92,6 @@
   border-bottom: 2px solid grey;
   margin-top: 0;
 }
-
 .signUpPassword {
   background: #FFFFFF;
   width: 100%;
@@ -122,25 +110,20 @@
   border: none;
   border-bottom: 2px solid grey;
 }
-
 .contactForm {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-
 .contact-field {
   margin: 10px 0;
 }
-
 .contact-message {
   height: 100px;
   width: 300px;
 }
-
 /* PUBLIC HOME COMPONENT */
-
 .homeContainer {
   position: relative;
   display: flex;
@@ -148,9 +131,8 @@
   flex-wrap: wrap;
   width: 80%;
   height: 500px;
-  margin: 100px auto 0;
+  margin: 0 auto;
 }
-
 .homeContainer h1{
   margin-bottom: 50px;
   height: 100px;
@@ -160,19 +142,16 @@
   line-height: 47px;
   text-align: left;
 }
-
 .homeChefContainer {
   width: 38vw;
   height: 22vw;
 }
-
 .homeChefContainer img{
   height: 100%;
   width: 100%;
   object-fit: cover;
   object-position: 0% 80%;
 }
-
 .homeChefContainer h2{
   font-family: 'Fahkwang', sans-serif;
   color: #CC3B31;
@@ -180,19 +159,16 @@
   font-size: 36px;
   line-height: 47px;
 }
-
 .homeRecipeContainer {
   width: 38vw;
   height: 22vw;
 }
-
 .homeRecipeContainer img{
   height: 100%;
   width: 100%;
   object-fit: cover;
   object-position: 0% 80%;
 }
-
 .homeRecipeContainer h2{
   font-family: 'Fahkwang', sans-serif;
   color: #CC3B31;
@@ -200,40 +176,33 @@
   font-size: 36px;
   line-height: 47px;
 }
-
 .chefButtons {
   width: 100%;
   display: flex;
   height: 5%;
   justify-content: space-between;
 }
-
 button{
   border: none;
   background: none;
   border: 1px solid rgb(124, 216, 201);
   border-radius: 5px;
   width: 30%;
-  color: rgb(124, 216, 201);
   font-weight: 600;
 }
-
 .recipeButtons {
   display: flex;
   justify-content: center;
   width: 100%;
   height: 5%;
 }
-
 .chefNavLink {
   text-decoration: none;
 }
-
 .recipeNavLink {
   text-decoration: none;
 }
 /* Nav Bar */
-
 .navBar {
   position: absolute;
   top: 0;
@@ -244,12 +213,27 @@ button{
   align-items: center;
   justify-content: space-between;
 }
-
 .navItem {
   text-decoration: none;
   color: #D9D9D9;
   margin: 0 50px;
   font-weight: 600;
+}
+
+.logo {
+  text-decoration: none;
+}
+
+.styledInput {
+  border: none;
+  border-bottom: 1px solid #c3c3c3;
+  text-align: center;
+}
+
+.styledIcon {
+  padding: 3px;
+  margin-left: 3px;
+  margin-right: 5px;
 }
 
 .styledInput {
