--- a/bohcura/src/App.css
+++ b/bohcura/src/App.css
@@ -247,3 +247,9 @@ button{
   margin-left: 3px;
   margin-right: 5px;
 }
+
+/* Chef Card */
+.chefCardLink {
+  text-decoration: none;
+  color: black;
+}
