--- a/bohcura/src/App.css
+++ b/bohcura/src/App.css
@@ -203,27 +203,103 @@ button{
 .recipeNavLink {
   text-decoration: none;
 }
-/* Nav Bar */
 .navBar {
-  position: absolute;
-  top: 0;
-  width: 100vw;
-  height: 50px;
-  background: #282c34;
+  background-color: #303030;
+  color: #f1f1f1;
   display: flex;
-  align-items: center;
+  font-size: 2.5rem;
   justify-content: space-between;
+  padding: 1.5%;
 }
-.navItem {
+@media (max-width: 1000px) {
+  .navBar {
+    font-size: 2.2rem;
+  }
+}
+@media (max-width:500px) {
+  .navBar {
+    display: flex;
+    flex-flow: column wrap;
+    align-content: center;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 0;
+    font-size: 1.8rem;
+  }
+}
+.navBar h1 {
+  color: #f1f1f1;
+  font-family: 'Hepta Slab', serif;
+  font-size: 3.3rem;
+  font-weight: bold;
+}
+@media (max-width:500px) {
+  .navBar h1 {
+    padding-top: 2%;
+    font-size: 2.5rem;
+  }
+}
+.navBar .nav {
+  font-family: 'Lato', sans-serif;
+  font-size: 2.2rem;
+  font-weight: bold;
+  padding-top: 0.5%;
+  text-align: right;
+  width: 60%;
+}
+@media (max-width:500px) {
+  .navBar .nav {
+    width: 50%;
+    padding: 2% 0%;
+    font-size: 1.8rem;
+    width: 100%;
+    justify-content: space-between;
+  }
+}
+.navBar .nav .a {
+  color: #ffffff;
+  font-family: 'Lato', sans-serif;
+  padding: 0 3%;
   text-decoration: none;
-  color: #D9D9D9;
-  margin: 0 50px;
-  font-weight: 600;
 }
+@media (max-width: 1000px) {
+  .navBar .nav .a {
+    padding: 0 1.5%;
+  }
+}
+@media (max-width:500px) {
+  .navBar .nav .a {
+    text-align: center;
+    line-height: 1.5;
+    padding-top: 5%;
+    padding: 0;
+    margin-right: 6%;
+  }
+}
+.navBar .nav .a:hover {
+  color: #e54236;
+}
+/*!* Nav Bar *!*/
+/*.navBar {*/
+/*  position: absolute;*/
+/*  top: 0;*/
+/*  width: 100vw;*/
+/*  height: 50px;*/
+/*  background: #282c34;*/
+/*  display: flex;*/
+/*  align-items: center;*/
+/*  justify-content: space-between;*/
+/*}*/
+/*.navItem {*/
+/*  text-decoration: none;*/
+/*  color: #D9D9D9;*/
+/*  margin: 0 50px;*/
+/*  font-weight: 600;*/
+/*}*/
 
-.logo {
-  text-decoration: none;
-}
+/*.logo {*/
+/*  text-decoration: none;*/
+/*}*/
 
 .styledInput {
   border: none;
